compiler/tests/fail/arm-m4/and_imm_too_large.jazz
export
fn main(reg u32 x) {
    x = #AND(x, 0x0000caca);
    [x] = x;
}
